--- a/pom.xml
+++ b/pom.xml
@@ -9,24 +9,19 @@
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
+
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.2.RELEASE</version>
+        <version>2.6.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.niteshb</groupId>
     <artifactId>nit-pet-clinic</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>nit-pet-clinic</name>
     <description>nit-pet-clinic</description>
     <properties>
         <java.version>11</java.version>
     </properties>
-    <dependencies>
-
-
-
-
-    </dependencies>
 
     <build>
         <plugins>
@@ -42,7 +37,21 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <goals>
+                        <goal>install</goal>
+                    </goals>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
+    <scm>
+        <developerConnection>scm:git:git@github.com:nitesh-b/nit-pet-clinic.git</developerConnection>
+    </scm>
 
 </project>
