--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     </parent>
     <groupId>com.niteshb</groupId>
     <artifactId>nit-pet-clinic</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.4-SNAPSHOT</version>
     <name>nit-pet-clinic</name>
     <description>nit-pet-clinic</description>
     <properties>
